src/components/gds-menu-item-nested/gds-menu-item-nested.scss
@use "../../styles/breakpoints" as *;

:host {
  display: block;
  position: relative;
}

// Item containing link and toggler
.menu-item {
  display: flex;
  flex-direction: row;
  align-items: stretch;
}

.submenu-icon {
  all: unset; // Reset button styles

  display: inline-block;
  text-align: center;
  cursor: pointer;
  padding: 0;
  margin-left: calc(-1 * var(--gds-spacing-2xs));
  margin-right: var(--gds-spacing-xs);

  .submenu-icon-content {
    //  Since the element is rotated we need it to be square
    padding: var(--gds-spacing-3xs);
    width: 1em;
    height: 1em;
    box-sizing: content-box;
    display: inline-flex;
    align-items: center;
    justify-content: center;

    outline: none;
    transform: rotate(90deg);

    @media (prefers-reduced-motion: no-preference) {
      transition: transform 0.3s ease;
    }
  }

  // Only visible when focused through the keyboard, focusing by clicking the
  // button doesn't show focus styles
  &:focus > .submenu-icon-content {
    outline: var(--gds-menu-item-nested-submenu-icon-outline-focus);
  }
}

// Submenu is hidden until set to expanded on the host element
.submenu {
  overflow: hidden;
  max-height: 0px;
  visibility: hidden;
  position: absolute;
  opacity: 0;
  display: block;
  // Expand to the size of the menu-item itself so that <gds-submenu> has the
  // correct container width.
  width: 100%;

  @media (prefers-reduced-motion: no-preference) {
    transition: opacity 0.2s ease;
  }

  :host([expanded]) & {
    overflow: visible;
    visibility: visible;
    opacity: 1;
  }
}

// Mobile and tablet behaves a bit differently
@include mobileAndTablet {
  :host([active]) .menu-item {
    background-color: var(--gds-menu-item-background-color-active, var(--gds-color-ui-background-01));
  }

  .submenu {
    max-height: 0px;
    position: relative;
    opacity: 1;

    @media (prefers-reduced-motion: no-preference) {
      transition: max-height 0.3s ease;
    }
  }

  :host([expanded]) {
    .submenu-icon-content {
      transform: rotate(-90deg);
    }

    .submenu {
      max-height: 300px;
    }
  }
}

::slotted(a) {
  // Reset menu link styles
  color: unset;
  text-decoration: none;
  // Span
  flex: 1 0 auto;
  display: block;

  --gds-menu-item-underline-active: var(--gds-menu-item-nested-underline-active);
}

// Focus link styles
::slotted(a:focus) {
  outline: var(--gds-menu-link-outline-focus);
  z-index: 1; // go above the submenu button
}

// Until :focus-visible has proper cross-browser support.
::slotted(a:focus:not(:focus-visible)) {
  outline: none;
}

